--- a/site/layouts/partials/media-block.html
+++ b/site/layouts/partials/media-block.html
@@ -7,6 +7,10 @@
   <div class="ph3-m w-50-m">
     <h3 class="f3 b lh-title mb1">{{.heading}}</h3>
     <p>{{.text}}</p>
+    <p>{{ .Params.birthday.Format "January 2, 2006" }}</p>
+    {{ dateFormat "Written on January 2, 2006" .birthday }}
+    <p>{{ .Params.values.birthday }}</p>
+    yo
   </div>
 
 </div>
