--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,8 +2,9 @@
 
 {{ partial "hero" (dict "imageUrl" .Params.image "imageDescription" .Params.image_description "title" .Title "subtitle" .Params.subtitle) }}
 
-<!-- {{ partial "short-text" .Params.blurb}}
+{{ partial "short-text" .Params.biography}}
 
+<!--
 {{ partial "text-and-image" (dict "heading" .Params.values.heading "text" .Params.values.text "buttonText" "Read more" "buttonLink" "/values") }}
 
 {{ partial "blog" . }} -->
