--- a/src/css/global/_general-styles.css
+++ b/src/css/global/_general-styles.css
@@ -14,15 +14,25 @@ body {
 p,
 ul:not(.no-list),
 ol:not(.no-list) {
-  margin-top: 25px;
+  margin-top: 35px;
+  line-height: 2;
+  padding-right: 25%;
 }
 
 h1 {
 
 }
 
-h2 {
-
+h2:not([class]) {
+  margin-top: 55px;
+  margin-bottom: 30px;
+  padding-bottom: 6px;
+  padding-right: 5px;
+  font-size: 28px;
+  font-family: var(--fontFamilyTitle);
+  letter-spacing: 1px;
+  border-bottom: 2px solid var(--colorSeparator);
+  display: inline-block;
 }
 
 h3 {
