--- a/src/css/molecules/_m-footer.css
+++ b/src/css/molecules/_m-footer.css
@@ -1,7 +1,7 @@
 .m-footer {
-  width: 100%;
+  /* width: 100%;
   padding: 10px 0;
   color: var(--colorTextLight);
   background-color: var(--colorBackgroundDark);
-  text-align: center;
+  text-align: center; */
 }
