--- a/src/css/molecules/_m-hero.css
+++ b/src/css/molecules/_m-hero.css
@@ -11,7 +11,7 @@
 }
 
 .m-hero__title {
-  padding-top: 250px;
+  padding-top: 34vh;
   font-size: 100px;
   font-family: var(--fontFamilyTitle);
 }
