--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,8 +4,8 @@
   {{ partial "hero" (dict "imageUrl" .Params.image "imageDescription" .Params.image_description "title" .Title "subtitle" .Params.subtitle) }}
 
   {{ partial "calendar" . }}
-
-  {{ partial "short-text" .Params.biography}}
+<!-- 
+  {{ partial "short-text" .Params.biography}} -->
 </div>
 
 <!--
