--- a/src/css/molecules/_m-hero.css
+++ b/src/css/molecules/_m-hero.css
@@ -26,14 +26,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 25%;
+  width: 100vw;
   height: 100vh;
-  background-color: var(--colorText);
+  text-align: right;
 }
 
 .m-hero__background img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  opacity: 0.25;
 }
