--- a/site/layouts/partials/calendar.html
+++ b/site/layouts/partials/calendar.html
@@ -1,9 +1,9 @@
 <section class="m-calendar">
-	<h2>Upcoming events</h2>
-
 	{{ range (where .Data.Pages "Type" "event") }}
 		<div class="m-calendar__item">
 			{{ partial "event" . }}
 		</div>
 	{{ end }}
+
+	<a href="#link" class="m-calendar__link">View all</a>
 </section>
