--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,8 +1,6 @@
 <nav class="m-nav">
 
-	<a href="/">Home</a>
-	<a href="/values">Values</a>
-	<a href="/post">Blog</a>
+	<a href="/about">About</a>
 	<a href="/contact">Contact</a>
 
 </nav>
