--- a/src/css/molecules/_m-nav.css
+++ b/src/css/molecules/_m-nav.css
@@ -1,5 +1,20 @@
 .m-nav {
   position: fixed;
   width: 100%;
+  right: 0;
+  padding-right: 150px;
+  bottom: 60px;
   text-align: right;
+  z-index: 2;
+}
+
+.m-nav a {
+  margin: 0 30px;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.m-nav a:hover {
+  color: var(--colorTextHover);
 }
