--- a/src/css/setup/_variables.css
+++ b/src/css/setup/_variables.css
@@ -1,7 +1,7 @@
 :root {
 	/* Typography */
-	--fontFamilyTitle: 'Playfair Display', serif;
-	--fontFamilyBody: 'Open Sans', Helvetica, arial, sans-serif;
+	--fontFamilyTitle: 'Raleway', serif;
+	--fontFamilyBody: 'Raleway', Helvetica, arial, sans-serif;
 	--line-height: 1.5;
 
 	--font-size: 18px;
